<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/MolarMinder"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/orange"
        android:textSize="32sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc"
        android:background="#3366FF"
        android:src="@drawable/tooth" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"  >
        
        <Button
	        android:id="@+id/connect_button"
	        android:layout_width="213dp"
	        android:layout_height="25dp"
	        android:background="@color/orange"
	        android:gravity="center_horizontal"
	        android:layout_gravity="center_horizontal"
	        android:onClick="onConnectionButtonClick"
	        android:text="@string/shimmer_connect"
	        android:textColor="@color/blue"
	        style="@style/LinearSpacing"
	        android:textColorHint="@color/orange" />

	    <Button
	        android:id="@+id/listen_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@color/orange"
	        android:layout_gravity="center_horizontal"
	        android:onClick="onListenButtonClick"
	        android:textColor="@color/blue"
	        style="@style/LinearSpacing"
	        android:textColorHint="@color/orange"
	        android:text="@string/listen_button" />
	    
	    <TextView
	        android:id="@+id/classification_text"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:gravity="bottom|center_horizontal"
	        android:text="@string/no_classification" />
	        
    </LinearLayout>
   
    
</FrameLayout>
